# slurm_sdk

./: .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCS_PUBLISHING.md  LICENSE.md  PR_REVIEW.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  lint.yml  publish-docs.yml  security.yml  test.yml
containers/: docker-compose.yml
containers/dev/: Containerfile
containers/slurm-integration/: Containerfile  slurm.conf
containers/slurm-pyxis-integration/: Containerfile  install-enroot.sh  install-pyxis.sh  slurm.conf
designs/: api_design_guidance.md  configuration_simplification_design.md  container_packaging_integration_test_design.md  eager_array_job_design.md  integration_test_design.md  slurm_sdk_api_design_analysis.md  train_eval_workflow_design.md  workflow_packaging_and_submission_design.md
docs/: CHANGELOG.md  CONTRIBUTING.md  index.md
docs/explanation/: callbacks_and_events.md  cli-and-tui.md  container_packaging.md  index.md  rendering_and_runner.md  security-model.md  slurm_concepts.md  system_overview.md  workflow_execution.md
docs/guides/: hello_torch.md  index.md  parallelization_patterns.md
docs/how-to/: cli.md  container_dependencies.md  hello_torch.md  index.md  parallelization_patterns.md  remote-debugging.md  ssh_security.md
docs/reference/: cli.md  index.md
docs/reference/api/: callbacks.md  cluster.md  errors.md  index.md  jobs_arrays.md  packaging_container.md  tasks_workflows.md
docs/reference/architecture/: callbacks_and_events.md  index.md  rendering_and_runner.md  system_overview.md  workflow_execution.md
docs/tutorials/: container_basics_hello_container.md  getting_started_hello_world.md  hello_torch.md  index.md  map_reduce.md  parallel-train-eval-workflow.md  parallelization_patterns.md  workflow_graph_visualization.md
examples/: EXAMPLES_SUMMARY.md  README.md  Slurmfile.container_example.toml  Slurmfile.cuda_example.toml  chain_jobs.py  dependent_jobs.py  distributed_context.py  hello_slurmfile.py  ml_workflow.py  workflow_graph_visualization.py
examples/container_image/: .dockerignore  cuda.Dockerfile
scripts/: run-integration-tests.sh
src/slurm/: __init__.py  _runner_impl.py  array_items.py  array_job.py  cluster.py  config.py  context.py  decorators.py  errors.py  job.py  logging.py  mcp_server.py  rendering.py  runner.py  runtime.py  task.py  ui.py  validation.py  workflow.py
src/slurm/api/: __init__.py  base.py  local.py  ssh.py
src/slurm/callbacks/: __init__.py  callbacks.py  debug.py
src/slurm/cli/: __init__.py  app.py  cluster.py  dash.py  docs.py  formatters.py  jobs.py  mcp.py  utils.py
src/slurm/examples/: Slurmfile.example.toml  __init__.py  chain_jobs.py  container_test_functions.py  dependent_jobs.py  distributed_context.py  hello_container.Dockerfile  hello_container.py  hello_cuda.py  hello_slurmfile.py  (+15 more)
tests/: __init__.py  conftest.py  test_account_jobs.py  test_after_dependencies.py  test_array_jobs.py  test_backend_mock.py  test_callbacks.py  test_callbacks_logging.py  test_cli.py  test_cluster_from_env.py  test_cluster_submit.py  test_container_packaging.py  test_context.py  test_context_execution.py  test_debug_callback.py  test_dependencies.py  test_dynamic_task.py  test_job_get_result.py  test_job_status.py  test_local_backend.py  test_mcp_server.py  test_metadata_resolution.py  test_packaging_parse.py  test_parallel_train_eval_example.py  test_rendering.py  test_runner.py  test_runtime.py  test_submission_and_download_errors.py  test_submitless_execution.py  test_task_decorator.py  test_type_safety.py  test_union_type_signatures.py  test_wheel_packaging.py  test_wheel_packaging_errors.py  test_with_dependencies.py  test_workflow_callbacks.py  test_workflow_container_integration.py  test_workflow_context.py  test_workflow_event_emission.py  test_workflow_example_callbacks.py  (+2 more)
tests/helpers/: local_backend.py
tests/integration/: __init__.py  conftest.py  container_test_tasks.py  dev  docker-compose.yml  slurm-pyxis-integration  test_container_packaging_advanced.py  test_container_packaging_basic.py  test_container_packaging_comprehensive.py  test_examples_end_to_end.py  test_job_script_persistence.py  test_native_array_jobs.py  test_output_dir.py  test_slurm_container.py  test_workflow_callbacks_integration.py
tests/tui/: __init__.py  test_dashboard_data.py  test_docs_loader.py  test_docs_search.py
(+44 files in other folders)
