[project]
name = "slurm-sdk"
version = "0.4.5-dev"
description = "Pythonic SDK for Slurm."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Ville Kallioniemi", email = "ville.kallioniemi@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cyclopts>=3.0.0",
    "paramiko>=3.5.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
tui = ["textual>=0.89.0", "pyyaml>=6.0"]

[project.scripts]
slurm = "slurm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slurm"]

[tool.hatch.build.targets.wheel.force-include]
"docs" = "slurm/_bundled_docs"
"mkdocs.yml" = "slurm/_bundled_docs/mkdocs.yml"

[dependency-groups]
dev = [
    "bandit>=1.7.0",
    "legionnaire>=0.1.0",
    "mdformat>=0.7.22",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-gfm>=0.4.1",
    "mdformat-tables>=1.0.0",
    "mkdocs-coverage>=2.0.0",
    "mkdocs-material>=9.6.1",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
    "pytest>=8.3.4",
    "pytest-cov>=7.0.0",
    "pytest-integration>=0.2.3",
    "pytest-testinfra>=10.0.0",
    "pytest-xdist>=3.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["tests/helpers"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = [
    "--cov=slurm",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-report=html:coverage_html",
]
markers = [
    "integration_test: marks tests as integration tests",
    "container_packaging: marks tests that require container packaging infrastructure (Pyxis/enroot)",
    "slow_integration_test: marks tests as slow integration tests",
]
